Fixed bug with avatar-file-reading, prepared for prod